Work in progress:

* Added support for specifying a date storage class. For more info <https://bitbucket.org/xerial/sqlite-jdbc/issue/23/getdate-returns-wrong-values>
* Issue 23 - getDate() returns wrong values
* Added support for InputStreams on PreparedStatement
    1. setBinaryStream()
    2. setAsciiStream()
    3. setUnicodeStream()
* Issue 54 - Implement PreparedStatement.setBinaryStream()

Release 3.7.15-SNAPSHOT-2
* Fixed clean target to remove previous driver builds
* Added support for URI filenames
    1. <http://www.sqlite.org/uri.html> examples <http://www.sqlite.org/c3ref/open.html#urifilenameexamples>
* Issue 42 - Using shared in-memory with URI filename
* Issue 47 - MetaData.getExportedKeys() returns empty string for a named foreign key
* Issue 46 - org.sqlite.MetaData.getExportedKeys constructs incorrect SQL
* Issue 44 - getExportedKeys throws Null Exception for foreign key without explicit primary column name
    1. Now returns keys for foreign key definitions like "create table referring (id, foreign key references referred)"
* Implemented getPercision(int) and getScale(int) on ResultSetMetaData.
* Issue 43 - ResultSetMetaData does not return the SQL Type if there are no results from the query.
    1. ResultSetMetaData.getColumnTypeName() now gets type from either 'create table' statement or CAST(expr AS TYPE) otherwise sqlite3_value_type.
    2. ResultSetMetaData.getColumnType() now parses the result from getColumnTypeName() to return a type.
    3. Driver recognizes the types listed at <http://www.sqlite.org/datatype3.html#affname> under 'Affinity Name Examples'.
* Issue 36 - Fixed case where a calling PreparedStatement.clearParameters() after a ResultSet is opened, caused subsequent calls to the ResultSet to return null.
    1. PreparedStatement.clearParameters() now uses sqlite3_clear_bindings instead of sqlite3_reset.
    2. PreparedStatement.clearParameters() does not reset current ResultSet.